k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-app
  namespace: default
  labels:
    app: oficina-app
  annotations:
    description: "Service for Oficina Mecanica API"
spec:
  type: LoadBalancer
  sessionAffinity: None
  selector:
    app: oficina-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: actuator
    port: 9090
    targetPort: 9090
    protocol: TCP
